# REZANOVA-CAS-CALCULATOR

./: .gitignore  AGENTS.md  Calcwiz-Refinement-Tasks-for-Codex.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.ui.config.ts
.memory/: INDEX.md  PROTOCOL.md  README.md  current-state.md  decisions.md  open-questions.md  world-canon.md
.memory/journal/: 2026-03-02.md  2026-03-03.md  2026-03-04.md  2026-03-05.md  2026-03-09.md  2026-03-10.md  2026-04-03.md  2026-04-04.md  2026-04-07.md  2026-04-08.md  2026-04-09.md  2026-04-10.md  2026-04-11.md  2026-04-24.md  2026-04-25.md  2026-04-26.md  README.md
.memory/research/: PLAN.md  TRACK-A4-MANUAL-VERIFICATION-CHECKLIST.md  TRACK-A5-MANUAL-VERIFICATION-CHECKLIST.md  TRACK-ABS5B-MANUAL-VERIFICATION-CHECKLIST.md  TRACK-ALG-R2-MANUAL-VERIFICATION-CHECKLIST.md  TRACK-ALG-R3-QA-MANUAL-VERIFICATION-CHECKLIST.md  TRACK-ALG-R4-MANUAL-VERIFICATION-CHECKLIST.md  TRACK-B1-MANUAL-VERIFICATION-CHECKLIST.md  TRACK-B2-B3-MANUAL-VERIFICATION-CHECKLIST.md  TRACK-CALC-COMP1-MANUAL-VERIFICATION-CHECKLIST.md  TRACK-CALC-DIFF1-MANUAL-VERIFICATION-CHECKLIST.md  (+9 more)
docs/: README.md  app_summary_latest.md  launch_copy.md
e2e/: calc-audit0-smoke.spec.ts  helpers.ts  qa1-smoke.spec.ts
playground/: README.md
src/: App.css  App.tsx  AppMain.status.ui.test.tsx  AppMain.tsx  AppMain.ui.test.tsx  index.css  main.tsx  mathlive.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
tools/: check-tauri-linux-deps.mjs  check-tauri-linux-deps.test.mjs
(+327 files in other folders)
